--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,7 +122,7 @@ services:
         hard: 262144
     depends_on:
       - "clickhouse-zookeeper"
+
 networks:
-  default:
-    external:
-      name: clickhouse-net
+  clickhouse-net:
+    driver: bridge
